# Zeta_Network_test

./: .gitignore  CONFIGURATION.md  Cargo.toml  README.md  become_relay.sh  bootstrap.txt  current_wss_url.txt  run_relay.sh  setup_cloudflare_tunnel.sh  start.sh
pythonanywhere/: README.md  flask_app.py  index.html  index_multi_relay.html  index_redirect.html  index_simple.html  index_wasm_old.html
pythonanywhere/pkg/: zeta_wasm.d.ts  zeta_wasm.js  zeta_wasm_bg.wasm
src/: main.rs  web_server.rs
static/: app.js  app_remote.js  app_wasm.js  config.js  index.html  index_wasm.html  style.css
static/pkg/: package.json  zeta_wasm_bg.wasm.d.ts
wasm/: Cargo.toml  index.html
wasm/src/: lib.rs
