[package]
name = "zeta2"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54", features = ["tcp", "tokio", "noise", "yamux", "gossipsub", "mdns", "relay", "dcutr", "identify", "kad", "ping", "macros"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = "0.3"
tokio-stream = "0.1"
futures-util = "0.3"

[profile.release]
opt-level = "s"
lto = true
