[package]
name = "zeta2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zeta2"
path = "src/main.rs"

[dependencies]
# libp2p
libp2p = { version = "0.54", features = ["tcp", "tokio", "noise", "yamux", "gossipsub", "mdns", "relay", "dcutr", "identify", "kad", "ping", "macros"] }

# Runtime
tokio = { version = "1.40", features = ["full"] }

# Sérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Async
futures = "0.3"
futures-util = "0.3"

# Web server
warp = "0.3"
tokio-stream = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "s"
lto = true
