[package]
name = "zeta-wasm"
version = "0.1.0"
edition = "2021"
description = "Zeta Network - Nœud P2P pour navigateur (WebAssembly)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WebAssembly bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# Web APIs
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Storage",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType"
] }

# Sérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Crypto pour génération de clés
getrandom = { version = "0.2", features = ["js"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Async
futures = "0.3"

# Utils
uuid = { version = "1.10", features = ["v4", "js", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "wasmbind"] }
base64 = "0.22"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-wasm = "0.2"

[profile.release]
opt-level = "z"
lto = true
